@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.glowroot</groupId>
     <artifactId>glowroot-parent</artifactId>
-    <version>0.13.7-SNAPSHOT</version>
+    <version>0.14.0-beta.3-SNAPSHOT</version>
     <relativePath>../../..</relativePath>
   </parent>
 
@@ -27,8 +27,7 @@
     <wiremock.version>2.26.0</wiremock.version>
     <okhttpclient.version>4.3.1</okhttpclient.version>
     <okhttpclient2x.version>2.7.5</okhttpclient2x.version>
-    <!-- CXF 3.2.0+ requires Java 8+ -->
-    <cxf.version>3.1.18</cxf.version>
+    <cxf.version>3.4.5</cxf.version>
     <!-- Spring 5+ requires Java 8+ -->
     <spring.version>4.3.26.RELEASE</spring.version>
     <axis.version>1.4</axis.version>
@@ -89,6 +88,22 @@
         </exclusion>
         <exclusion>
           <groupId>io.netty</groupId>
+          <artifactId>netty-common</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-resolver</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-buffer</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
           <artifactId>netty-codec-http</artifactId>
         </exclusion>
         <exclusion>
@@ -132,8 +147,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -218,10 +233,52 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <!-- wiremock-standalone is needed in order to compile against wiremock.org.apache.http.HttpRequest -->
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-standalone</artifactId>
+      <version>${wiremock.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.jws</groupId>
+      <artifactId>jsr181-api</artifactId>
+      <version>1.0-MR1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>7.3.1</version>
+      <version>9.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -247,24 +304,6 @@
         </executions>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <!-- this is just so eclipse will use Java 7 for this module, since Java 7 is needed for
-            running the tests against the latest versions of okhttp and cxf -->
-          <artifactId>maven-compiler-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>default-testCompile</id>
-              <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
 
   <profiles>
@@ -311,105 +350,6 @@
           </exclusions>
         </dependency>
       </dependencies>
-    </profile>
-    <profile>
-      <id>not-test-java6</id>
-      <activation>
-        <property>
-          <name>!glowroot.test.java6</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <!-- wiremock-standalone is needed in order to compile against
-            wiremock.org.apache.http.HttpRequest, but the artifact also causes problems when running
-            tests against Java 6 because it includes (non-shaded) Servlet 3.1 API (which is compiled
-            against Java 7) -->
-          <groupId>com.github.tomakehurst</groupId>
-          <artifactId>wiremock-standalone</artifactId>
-          <version>${wiremock.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <!-- dependencies below are required on Java 7+ -->
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.xml.ws</groupId>
-          <artifactId>jaxws-api</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.jws</groupId>
-          <artifactId>jsr181-api</artifactId>
-          <version>1.0-MR1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>org.glassfish.jaxb</groupId>
-          <artifactId>jaxb-runtime</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>com.sun.activation</groupId>
-          <artifactId>javax.activation</artifactId>
-          <version>1.2.0</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>test-java6</id>
-      <activation>
-        <property>
-          <name>glowroot.test.java6</name>
-        </property>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-testCompile</id>
-                  <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-    <profile>
-      <id>java6or7</id>
-      <activation>
-        <jdk>[1.6,1.8)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <!-- this is needed when building with Java 6 or 7 -->
-              <argLine>-XX:MaxPermSize=128m</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <id>async-http-client-2.x</id>
